state-chain/custom-rpc/src/tests/snapshots/custom_rpc__tests__account_info__all_account_infos_serialization.snap
---
source: state-chain/custom-rpc/src/tests/account_info.rs
expression: "serde_json::to_string_pretty(&account_infos).unwrap()"
---
[
  {
    "account_id": "5DZahar1q7Bd1h9yA8ngnxsgq76E7vS5Wj2KAVkjee9mhP9o",
    "vanity_name": "VALIDATOR",
    "flip_balance": "0x2b5e3af16b1880000",
    "asset_balances": {
      "Ethereum": {
        "ETH": "0x0",
        "FLIP": "0x0",
        "USDC": "0x0",
        "USDT": "0x0",
        "WBTC": "0x0",
        "CBBTC": "0x0"
      },
      "Polkadot": {
        "DOT": "0x0"
      },
      "Bitcoin": {
        "BTC": "0x0"
      },
      "Arbitrum": {
        "ETH": "0x0",
        "USDC": "0x0",
        "USDT": "0x0"
      },
      "Solana": {
        "SOL": "0x0",
        "USDC": "0x0",
        "USDT": "0x0"
      },
      "Assethub": {
        "DOT": "0x0",
        "USDT": "0x0",
        "USDC": "0x0"
      },
      "Tron": {
        "TRX": "0x0",
        "USDT": "0x0"
      },
      "Bsc": {
        "BNB": "0x0",
        "USDT": "0x0"
      }
    },
    "bond": "0x56bc75e2d63100000",
    "estimated_redeemable_balance": "0x15af1d78b58c40000",
    "role": "validator",
    "last_heartbeat": 150000,
    "reputation_points": 850,
    "keyholder_epochs": [
      100,
      123,
      124,
      125
    ],
    "is_current_authority": true,
    "is_current_backup": false,
    "is_qualified": true,
    "is_online": true,
    "is_bidding": false,
    "apy_bp": 375,
    "bid": "0x79",
    "max_bid": "0x7b",
    "operator": "5EmM3XnzKd5LJMr6oDAD6wEBP1Lgs7juQozaPpurTr3yVFbc"
  }
]
