state-chain/custom-rpc/src/tests/snapshots/custom_rpc__tests__account_info__broker_serialization.snap
---
source: state-chain/custom-rpc/src/tests/account_info.rs
expression: "serde_json::to_string_pretty(&wrapper).unwrap()"
---
{
  "vanity_name": "TEST",
  "flip_balance": "0x4563918244f40000",
  "asset_balances": {
    "Ethereum": {
      "ETH": "0x0",
      "FLIP": "0x0",
      "USDC": "0x0",
      "USDT": "0x0",
      "WBTC": "0x0",
      "CBBTC": "0x0"
    },
    "Polkadot": {
      "DOT": "0x0"
    },
    "Bitcoin": {
      "BTC": "0x0"
    },
    "Arbitrum": {
      "ETH": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Solana": {
      "SOL": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDT": "0x0",
      "USDC": "0x0"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    },
    "Bsc": {
      "BNB": "0x0",
      "USDT": "0x0"
    }
  },
  "bond": "0x8ac7230489e80000",
  "estimated_redeemable_balance": "0x3782dace9d900000",
  "bound_redeem_address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "restricted_balances": {
    "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb": "0x1bc16d674ec80000"
  },
  "role": "broker",
  "earned_fees": {
    "Ethereum": {
      "ETH": "0x3782dace9d90000",
      "FLIP": "0xde0b6b3a7640000",
      "USDC": "0x7a120",
      "USDT": "0x493e0",
      "WBTC": "0x4c4b40",
      "CBBTC": "0x4c4b40"
    },
    "Polkadot": {
      "DOT": "0x12a05f200"
    },
    "Bitcoin": {
      "BTC": "0x4c4b40"
    },
    "Arbitrum": {
      "ETH": "0x16345785d8a0000",
      "USDC": "0x30d40",
      "USDT": "0x7a120"
    },
    "Solana": {
      "SOL": "0x3b9aca00",
      "USDC": "0x249f0",
      "USDT": "0xc350"
    },
    "Assethub": {
      "DOT": "0x77359400",
      "USDT": "0xc350",
      "USDC": "0x186a0"
    },
    "Tron": {
      "TRX": "0x4c4b40",
      "USDT": "0x7a120"
    },
    "Bsc": {
      "BNB": "0x429d069189e0000",
      "USDT": "0x58d15e176280000"
    }
  },
  "affiliates": [
    {
      "account_id": "5C62Ck4UrFPiBtoCmeSrgF7x9yv9mn38446dhCpsi2mLHiFT",
      "short_id": 1,
      "withdrawal_address": "0xcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcf"
    },
    {
      "account_id": "5C7LYpP2ZH3tpKbvVvwiVe54AapxErdPBbvkYhe6y9ZBkqWt",
      "short_id": 42,
      "withdrawal_address": "0xdededededededededededededededededededede"
    }
  ],
  "btc_vault_deposit_address": "tb1pqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqsn60vlk",
  "bound_fee_withdrawal_address": "0x0404040404040404040404040404040404040404"
}
