state-chain/custom-rpc/src/tests/snapshots/custom_rpc__tests__account_info__no_account_serialization.snap
---
source: state-chain/custom-rpc/src/tests/account_info.rs
assertion_line: 57
expression: "serde_json::to_string_pretty(&wrapper).unwrap()"
---
{
  "vanity_name": "NO_ACCOUNT",
  "flip_balance": "0x14d1120d7b160000",
  "asset_balances": {
    "Ethereum": {
      "ETH": "0x22b1c8c1227a0000",
      "FLIP": "0x0",
      "USDC": "0xf4240",
      "USDT": "0x0",
      "WBTC": "0x5f5e100",
      "CBBTC": "0x5f5e100"
    },
    "Polkadot": {
      "DOT": "0x2540be400"
    },
    "Bitcoin": {
      "BTC": "0x5f5e100"
    },
    "Arbitrum": {
      "ETH": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Solana": {
      "SOL": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDT": "0x0",
      "USDC": "0x0"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    },
    "Bsc": {
      "BNB": "0x0",
      "USDT": "0x0"
    }
  },
  "bond": 0,
  "estimated_redeemable_balance": 0,
  "current_delegation_status": {
    "5EmM3XnzKd5LJMr6oDAD6wEBP1Lgs7juQozaPpurTr3yVFbc": "0xde0b6b3a7640000"
  },
  "upcoming_delegation_status": {
    "5FY6p4faNbTZeuEZat5QtPXhjUHvjopmqUCbQibdKpvyPbww": "0x6f05b59d3b20000"
  },
  "role": "unregistered"
}
